--- a/W2_S2.ipynb
+++ b/W2_S2.ipynb
@@ -590,70 +590,27 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"fig,ax = plt.subplots(1,1,figsize=(12, 12),subplot_kw={'projection': ccrs.Robinson()})\n",
-        "# The rest doesn't change:\n",
-        "ax.set_extent([-140, -60, 12,70], ccrs.PlateCarree())\n",
-        "\n",
-        "######################################################################################################################################################\n",
-        "# Add Land, Ocean, Rivers, and State Lines\n",
-        "# Hint: Land linewidth = 3; States: edgecolor='gray',linewidth=1.25; lakes/ocean/rivers: no change\n",
-        "# Hint: https://matplotlib.org/stable/gallery/color/named_colors.html for the names of the colors available\n",
-        "######################################################################################################################################################\n",
-        "____.add_feature(cartopy._____.____, edgecolor='____',linewidths=____)\n",
-        "____.add_feature(cartopy._____.____)\n",
-        "____.add_feature(cartopy._____.____)\n",
-        "____.add_feature(cartopy._____.____)\n",
-        "____.add_feature(cartopy._____.____,edgecolor='____',linewidth=____)\n",
-        "____.gridlines(lw=____,color='____')\n",
-        "\n",
-        "######################################################################################################################################################\n",
-        "# Add Scatter points for earthquake data\n",
-        "# Hint: usgs_2014_large['longitude'] to access logitude data, usgs_2014_large['latitude'] to access latitude data, usgs_2014_large['mag'] to access Earthquake magnitudes\n",
-        "# Hint: https://matplotlib.org/stable/gallery/color/named_colors.html for the names of the colors available\n",
-        "######################################################################################################################################################\n",
-        "____ = ax.scatter(____,____,s=62,c=____,marker='o',cmap='____',edgecolors='____',linewidths=2, transform=____)\n",
-        "plt.colorbar(____,ax=____,fraction=0.016, pad=0.04,label='____')\n",
-        "ax.set_title('____')\n",
-        "plt.show()\"\"\"\n",
-        "\n",
-        "import pandas as pd\n",
-        "import pooch\n",
-        "import matplotlib.pyplot as plt\n",
-        "import cartopy.crs as ccrs\n",
-        "import cartopy.feature as cfeature\n",
-        "\n",
-        "# Télécharger le fichier\n",
-        "fname = pooch.retrieve(\n",
-        "    \"https://unils-my.sharepoint.com/:x:/g/personal/tom_beucler_unil_ch/Ea9h1j2_wYpEtuX5waZZWpsBt2zh3lvGUBFisvA8dFG5Eg?download=1\",\n",
-        "    known_hash='84d455fb96dc8f782fba4b5fbe56cb8970cab678f07c766fcba1b1c4674de1b1')\n",
-        "usgs_2014 = pd.read_csv(fname)\n",
-        "\n",
-        "# Supprimer les valeurs manquantes et filtrer les tremblements de terre > 4\n",
-        "usgs_2014_nonan = usgs_2014.dropna()\n",
-        "usgs_2014_large = usgs_2014_nonan[usgs_2014_nonan['mag'] > 4]\n",
-        "\n",
-        "# Création de la carte\n",
         "fig, ax = plt.subplots(1, 1, figsize=(12, 12), subplot_kw={'projection': ccrs.Robinson()})\n",
         "ax.set_extent([-140, -60, 12, 70], ccrs.PlateCarree())\n",
         "\n",
         "######################################################################################################################################################\n",
-        "# Ajouter des éléments à la carte\n",
+        "# Add Land, Ocean, Rivers, and State Lines\n",
         "######################################################################################################################################################\n",
-        "ax.add_feature(cfeature.LAND, edgecolor='black', linewidths=3)\n",
-        "ax.add_feature(cfeature.OCEAN)\n",
-        "ax.add_feature(cfeature.RIVERS)\n",
-        "ax.add_feature(cfeature.LAKES)\n",
-        "ax.add_feature(cfeature.STATES, edgecolor='gray', linewidth=1.25)\n",
+        "ax.add_feature(cartopy.feature.LAND, edgecolor='black', linewidths=3)\n",
+        "ax.add_feature(cartopy.feature.OCEAN)\n",
+        "ax.add_feature(cartopy.feature.RIVERS)\n",
+        "ax.add_feature(cartopy.feature.LAKES)\n",
+        "ax.add_feature(cartopy.feature.STATES, edgecolor='gray', linewidth=1.25)\n",
         "ax.gridlines(lw=0.5, color='gray')\n",
         "\n",
         "######################################################################################################################################################\n",
-        "# Ajouter des points pour les tremblements de terre\n",
+        "# Add Scatter points for earthquake data\n",
         "######################################################################################################################################################\n",
-        "sc = ax.scatter(usgs_2014_large['longitude'], usgs_2014_large['latitude'],\n",
-        "                 s=62, c=usgs_2014_large['mag'], marker='o', cmap='Reds', edgecolors='black', linewidths=2, transform=ccrs.PlateCarree())\n",
+        "sc = ax.scatter(usgs_2014_large['longitude'], usgs_2014_large['latitude'], s=62, c=usgs_2014_large['mag'], marker='o', cmap='Reds', edgecolors='black', linewidths=2, transform=ccrs.PlateCarree())\n",
         "plt.colorbar(sc, ax=ax, fraction=0.016, pad=0.04, label='Earthquake Magnitude')\n",
         "ax.set_title('earthquake > 4')\n",
-        "plt.show()\n"
+        "plt.show()\n",
+        "\n"
       ],
       "metadata": {
         "id": "l5MLpLafUPpA",
@@ -661,9 +618,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 553
         },
-        "outputId": "570ffecb-6aa2-4df5-f2d6-e3028e1e7528"
+        "outputId": "682f6acd-0e6c-48b3-d45c-d28d7f5ff134"
       },
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
